added new photos of owners

--- a/chinatown.html
+++ b/chinatown.html
@@ -55,7 +55,7 @@
     <div class="profile">
      <h3> About the Business Owner </h3>
      <div class="owner-pic">
-        <img class="owner" src="assets/ownerkawa.png" alt="picture of business owner kawa">
+        <img class="owner" src="assets/ownerkawawstars.png" alt="picture of business owner kawa with star decorations">
      </div>
      <p> The owner's name of Asian Garden is Ka Wa. He immigrated from Hong Kong in 1993. Shortly after, he started his business and has been working with his family ever since.</p>
      <p> When I asked him why he started his restaurant, he responded <span>“Because cooking is my passion”</span>.</p>
