--- a/eastboston.html
+++ b/eastboston.html
@@ -58,7 +58,7 @@
         <div class="profile">
          <h3> About the Business Owner </h3>
          <div class="owner-pic">
-            <img class="elpelon-owner" src="assets/maria-balbin.png" alt="picture of business owner maria balbin">
+            <img class="elpelon-owner" src="assets/maria balbin with stars.png" alt="picture of business owner maria balbin with star decorations">
          </div>
          <p> It all started when Marina Balbin left Colombia about 35 years ago to come for the “American Dream” she first arrived in NYC, but that didn’t work. She then arrived  to Boston in 1998 where she got an opportunity to start her business, which is now El Peñol Resturante authentic Colombian cuisine.</p>
         </div>
