responsiveness about us

--- a/aboutus.html
+++ b/aboutus.html
@@ -28,22 +28,27 @@
         <div class="bios">
             <section class="selina">
                 <h1>Selina Li</h1>
-                <img class="selina-image" src="assets/selina.png" alt="picture of selina wearing green cardigan and smiling">
+                <div class="profile-pic">
+                    <img class="selina-image" src="assets/selina.png" alt="picture of selina wearing green cardigan and smiling">
+                </div>
                 <p><a href="https://selinal.myportfolio.com/"> Selina</a> is a junior majoring in Media Science. She is interested in user-experience, user-centered design, and storytelling. She grew up in the Boston Chinatown neighborhood and has fond memories eating out, playing, and connecting with people within the community. </p>
             </section>
             <section class="elyana">
                 <h1>Elyana Alajmi</h1>
-                <img class="elyana-image" src="assets/elyana.png" alt="picture of elyana smiling">
+                <div class="profile-pic">
+                    <img class="elyana-image" src="assets/elyana.png" alt="picture of elyana smiling">
+                </div>
                 <p><a href="https://www.linkedin.com/in/elyana-alajmi/">Elyana</a> is a Public Relations graduate student with a background in Marketing and Finance. She is interested in deepening her understanding of businesses and the client/investor relationship. She’s been in Boston for almost a decade and considers it her home.  </p>
             </section>
         </div>
     </main>
     <footer>
         <section class="doc-links">
-            <h2>Project Plan</h2>
-            <h2>Wireframe</h2>
-            <h2>UX Report</h2>
-            <h2>Design Documentation</h2>
+            <a href="https://docs.google.com/document/d/1dHH26H-0xLW40eapRAgPV_ryzTQf5ZO3TOdL3QGb_N0/edit?usp=sharing">Project Plan</a>
+            <a href="https://drive.google.com/file/d/1zU474tYxmlTBHQbaAgeji107JcmOnXIc/view?usp=sharing">Wireframe</a>
+            <a href="https://docs.google.com/document/d/1dRYb3tJKz2idUj7DGTAJagMbDwmnW-Y9MjOLQhYwrKM/edit?usp=sharing">UX Report</a>
+            <a href="https://docs.google.com/document/d/1NLA4rusL7y6Si41625KrCYIrA1qW2T8G0_9ESlaIVZw/edit?usp=sharing">Design Documentation</a>
+            <a href="https://docs.google.com/document/d/1Oa82XQXZ_4rZ-ELB6vefks_C0VINcE8VczkrON-qd9I/edit?usp=sharing">Works Cited</a>
         </section>
     </footer>
     </body>
