--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <p> Our goal is to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.” </p>
                 <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local business in the Boston and the greater Boston area and help support their businesses.  </p>
                     <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png">
-                        The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> -Suzanne P. Clark, president of the U.S. Chamber</div>
+                        The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> -<cite>Suzanne P. Clark, president of the U.S. Chamber</cite></div>
                     </blockquote>
             </div>
         </div>
