changes to padding

--- a/eastboston.html
+++ b/eastboston.html
@@ -97,7 +97,7 @@
 
         <div class="support">
             <h3>Here's How You Can Help</h3>
-            <figure>
+            <figure class="takeout-block">
                 <img class="takeout" src="assets/117108314_2579134242189444_2235551365629470503_n.png"
                     alt="picture of the bendjo penol plate">
                 <figcaption class="take-out-caption">The famous Bandejo Penol</figcaption>
