--- a/chinatown.html
+++ b/chinatown.html
@@ -63,17 +63,17 @@
     </div>
     <div class="impact">
      <h3> Struggling with Multiple Pandemics </h3>
-     <p> During our phone interview, KaWa noted that there was a <span>50%</span> decrease in business due to the pandemic</p>
+     <p> During our phone interview, KaWa noted that there was a <span>50%</span> decrease in business due to the pandemic.</p>
      <p> Although the state government provided funding to keep workers in local businesses employed through the Paycheck Protection Program (PPP), there was still not enough business to hire workers back. </p>
      <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
      <div class="poc-statistics"> 
          <div class="foo5"></div>
-         <h4> Reported Asian hate crimes rose to <span>150%</span> in 2020 </h4> 
+         <h4> Reported Asian hate crimes rose to <span>150%</span> in 2020. </h4> 
          <h4><i>Stop Asian Hate</i> reported nearly 3,800 incidences of hate crimes.</h4> 
          <h4>Hate crimes are largely undercounted due to language barriers, mistrust with authorities, and reluctancy to speak up.</h4>
     </div>
      <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely refuse to pick it up, which resulted in wasted food and expenses.</p>
-     <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. </p>
+     <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. Kawa has hope that Asian Garden will bounce back, but the road to normalcy is going to be long and stressful. </p>
     </div> 
 
          <!-- carousel starts -->
@@ -87,12 +87,11 @@
 
         </div>
 
-
         <!-- carousel ends -->
 
     <div class="support">
         <h3>Here's How You Can Help</h3>
-        <figure>
+        <figure class="takeout-block">
             <img class="takeout" src="assets/IMG_3527 2.png"
                 alt="picture of walnut shrimp and stir fry beef with pepper takeout">
             <figcaption class="take-out-caption"> walnut shrimp and stir fry beef with peppers</figcaption>
