--- a/aboutus.html
+++ b/aboutus.html
@@ -32,13 +32,15 @@
                     <img class="selina-image" src="assets/selina.png" alt="picture of selina wearing green cardigan and smiling">
                 </div>
                 <p><a href="https://selinal.myportfolio.com/"> Selina</a> is a junior majoring in Media Science. She is interested in user-experience, user-centered design, and storytelling. She grew up in the Boston Chinatown neighborhood and has fond memories eating out, playing, and connecting with people within the community. </p>
+                <p class="role">Role: Content Writing, CSS, HTML</p>
             </section>
             <section class="elyana">
                 <h1>Elyana Alajmi</h1>
                 <div class="profile-pic">
                     <img class="elyana-image" src="assets/elyana.png" alt="picture of elyana smiling">
                 </div>
-                <p><a href="https://www.linkedin.com/in/elyana-alajmi/">Elyana</a> is a Public Relations graduate student with a background in Marketing and Finance. She is interested in deepening her understanding of businesses and the client/investor relationship. She’s been in Boston for almost a decade and considers it her home.  </p>
+                <p><a href="https://www.linkedin.com/in/elyana-alajmi/">Elyana</a> is a Public Relations graduate student with a background in Marketing and Finance. She is interested in deepening her understanding of businesses and the client/investor relationship. She’s been in Boston for almost a decade and considers it her home. </p>
+                <p class="role">Role: Content Writing, Javascript</p>
             </section>
         </div>
     </main>
