added photos to ag-carousel

--- a/chinatown.html
+++ b/chinatown.html
@@ -79,11 +79,11 @@
          <!-- carousel starts -->
 
          <div class="carousel">
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/front-desk-ag.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/neon-sign-ag.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/kitchen-side-ag.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/takeout-food-ag.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/qr-code-ag.png" alt=""></div>
 
         </div>
 
