--- a/chinatown.html
+++ b/chinatown.html
@@ -121,8 +121,8 @@
             <script async defer crossorigin="anonymous"
                     src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="LLGmSjzK"></script>
             <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
-                    data-text="Check out el penol at East Boston! "
-                    data-url="https://selinal552.github.io/covid19-impacts-on-local-businesses/eastboston.html"
+                    data-text="Check out this website on how locally-owned businesses in Boston have been affected by the pandemic!"
+                    data-url="https://selinal552.github.io/covid19-impacts-on-local-businesses/"
                     data-show-count="false">Tweet</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
