--- a/eastboston.html
+++ b/eastboston.html
@@ -118,18 +118,18 @@
                 <script async defer crossorigin="anonymous"
                     src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="05brBWaQ"></script>
                 <div class="fb-share-button"
-                    data-href="https://selinal552.github.io/covid19-impacts-on-local-businesses/eastboston.html"
+                    data-href="https://selinal552.github.io/covid19-impacts-on-local-businesses/"
                     data-layout="button" data-size="large"><a target="_blank"
                         href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fselinal552.github.io%2Fcovid19-impacts-on-local-businesses%2Feastboston.html&amp;src=sdkpreparse"
                         class="fb-xfbml-parse-ignore">Share</a></div>
                 <div id="fb-root"></div>
                 <script async defer crossorigin="anonymous"
                     src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v10.0" nonce="LLGmSjzK"></script>
-                <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
-                    data-text="Check out el penol at East Boston! "
-                    data-url="https://selinal552.github.io/covid19-impacts-on-local-businesses/eastboston.html"
+               <a href="https://twitter.com/share?ref_src=twsrc%5Etfw" class="twitter-share-button" data-size="large"
+                    data-text="Check out this website on how locally-owned businesses in Boston have been affected by the pandemic!"
+                    data-url="https://selinal552.github.io/covid19-impacts-on-local-businesses/"
                     data-show-count="false">Tweet</a>
-                <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 </div>
             </ul>
         </div>
