--- a/chinatown.html
+++ b/chinatown.html
@@ -3,6 +3,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <script href="scripts/script.js" defer></script>
     <title>The Impact of COVID-19: Asian Garden Restaurant in Chinatown </title>
       <!-- for the carousel -->
