changes to html and css

--- a/chinatown.html
+++ b/chinatown.html
@@ -32,7 +32,7 @@
             <figure class="address-figure">
                  <div class="arrow-group">
                     <img class="restaurant-arrow-ag" src="assets/icons8-forward-arrow-64.png"/>
-                    <figcaption class="eb-rest-image-caption"> the front of the store</figcaption>
+                    <figcaption class="eb-rest-image-caption"> the front of the restaurant</figcaption>
                  </div>
                 <img class="eb-restaurant-image" src="assets/asian garden full rest..png" alt="outside of the restaurant, showing neon open sign"> 
                 </figure>
