--- a/eastboston.html
+++ b/eastboston.html
@@ -82,7 +82,7 @@
          <p>El Penol quickly closed down their restaurant to ensure everyone’s safety, especially since Marina was working 7 days every week.</p>
          <p>It was hard on everyone, and Johan saw it first-hand when they only talked to his grandmother through the phone. Thankfully, El Penol was and still is busy throughout the whole pandemic. </p>
          <p>The Latinx community in the Boston and the greater Boston area has been supportive to each other and to Latinx businesses. </p>
-         <blockquote class=eb-quote> <img class="quotemark" src="assets/icons8-quote-left-100.png"> Us Latinos help each other a lot and support one another. We are all here for one goal which is to give our family a better life and strive and stick together to reach that goal. <br> <cite> -Johan Medina, El Penol’s manager and grandson of Marina’s.</cite> </blockquote>
+         <blockquote class=eb-quote> <img class="quotemark" src="assets/icons8-quote-left-100.png"> Us Latinos help each other a lot and support one another. We are all here for one goal which is to give our family a better life and strive and stick together to reach that goal. <br> <cite> -Johan Medina, El Penol’s manager and grandson of Maria.</cite> </blockquote>
         </div> 
 
          <!-- carousel starts -->
