--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon>
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <script href="scripts/script.js" defer></script>
     <title>Centering Communities During COVID-19</title>
@@ -24,13 +24,13 @@
         <div class="container">
             <h1 class="front-page-header"> The <span class="header-span">Impact of COVID19</span> on Boston Minority Businesses </h1>
             <img class="header-image" src="assets/adam-niescioruk-Z9arfr0f248-unsplash.jpg" alt="graffiti of mask with word covid-19">  
-            <div class="foo"></div>
+            <div class="orange-line1"></div>
         </div>
     </header>  
     <main>
         <div class="homepage-introduction"> 
             <h2> The COVID-19 pandemic has affected everyone, but <i>not equally</i>.</h2>
-            <div class="foo4"> </div>
+        <div class="horizontal-line1"> </div>
         </div>
         <div class="overview-part-1">
             <p> The pandemic amplified a huge gap between white and minority communities including access to food, economic resources, job opportunities, and education. Because communities of color face more economic insecurity and often work service jobs, they face a greater risk of exposure to the virus, and thus are disproportionately affected by COVID-19. </p>
