fixed issue with imaages

--- a/chinatown.html
+++ b/chinatown.html
@@ -50,7 +50,7 @@
     </div> 
     <div class="walk-through">
         <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
-        <figure>
+        <figure class="inside-restaurant">
             <img class="inside1" src="assets/inside of restaurant.png" alt="inside of the restaurant with dividers"> 
             <figcaption class="inside-caption"> inside of asian garden </figcaption>
         </figure>
