--- a/eastboston.html
+++ b/eastboston.html
@@ -54,7 +54,7 @@
         <div class="walk-through">
             <p> I visited El Penol on a Tuesday morning, it was still busy making take-out and dine-in orders, but you can’t tell because they cater to each customer and make them feel like they are part of the family. </p>
             <p> The restaurant has clear dividers between each table with a sanitizer at the entrance. People wait to be seated, so everyone can be enjoy their meals safely.</p>
-            <figure>
+            <figure class="inside-restaurant">
                 <img class="inside1" src="assets/IMG_1560.png">
                 <figcaption class="inside-caption"> inside of el penol </figcaption>
             </figure>
