added elpenol photos to carousel

--- a/eastboston.html
+++ b/eastboston.html
@@ -88,11 +88,11 @@
          <!-- carousel starts -->
 
          <div class="carousel">
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
-            <div><img class="carousel-img" src="assets/el penol restaurant.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el-penol-inside1.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el-penol-inside2.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el-penol-food.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el-penol-drinks.png" alt=""></div>
+            <div><img class="carousel-img" src="assets/el-penol-at-night.png" alt=""></div>
 
         </div>
 
