--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
             <p>Yet, Black people make up <span>24%</span> of the reported COVID-19 cases. Latinx people make up <span>30%</span> of the cases. White people only make up <span>34%</span>. </p>
         </div>
         <div class="overview-part-2">
-            <p> You can see the disparity within each neighborhood. Neighborhoods like Dorchester, Hyde Park, Revere, and East Boston, predominately Black & Brown neighborhoods experience higher rates of COVID-19. </p>
+            <p>  Neighborhoods like Dorchester, Hyde Park, Revere, and East Boston, predominately Black & Brown neighborhoods experience higher rates of COVID-19. </p>
+            <p> The pandemic only amplified and exacerbated the real issue: <strong> access to a healthy, happy, high-quality life is not insured for communities of color.</strong> </p>
         </div>  
         
             <div class="overview-part-3">
-                <p> The pandemic only amplified and exacerbated the real issue: <strong> access to a healthy, happy, high-quality life is not insured for communities of color.</strong> </p>
                 <p> Our goal is to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.” </p>
                 <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local business in the Boston and the greater Boston area and help support their businesses.  </p>
                     <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png">
