--- a/chinatown.html
+++ b/chinatown.html
@@ -72,9 +72,9 @@
      <p>KaWa believes that the rise of hate crimes against Asian-Americans due to broader rhetoric about Asian-Americans being responsible for carrying the disease has contributed to the loss in revenue. </p> 
      <div class="poc-statistics"> 
          <div class="foo5"></div>
-         <h4> Reported Asian hate crimes rose to <span>150%</span> in 2020. </h4> 
-         <h4><i>Stop Asian Hate</i> reported nearly 3,800 incidences of hate crimes.</h4> 
-         <h4>Hate crimes are largely undercounted due to language barriers, mistrust with authorities, and reluctancy to speak up.</h4>
+         <h4> Reported Asian hate crimes rose to <span>150%</span> in 2020.<a href="https://www.cbsnews.com/news/asian-american-hate-crimes-up-150-percent-us/" rel="footnote">1</a> </h4> 
+         <h4><i>Stop Asian Hate</i> reported nearly 3,800 incidences of hate crimes. <a href="https://www.nbcnews.com/news/asian-america/there-were-3-800-anti-asian-racist-incidents-mostly-against-n1261257" rel="footnote">2</a></h4> 
+         <h4>Hate crimes are largely undercounted due to language barriers, mistrust with authorities, and reluctancy to speak up.<a href="https://abcnews.go.com/US/anti-asian-hate-incidents-unreported/story?id=76509072" rel="footnote">3</a></h4>
     </div>
      <p> In addition, KaWa has encountered acts of discrimination. People would call the restaurant to direct racial slurs and expletives at the owner. They would also order food but purposely refuse to pick it up, which resulted in wasted food and expenses.</p>
      <p> KaWa believes that Chinatown has become increasingly dangerous. There were <span>three attempted robberies</span> at the restaurant in the past year. Despite installing security systems, he would come back to smashed restaurant windows. Kawa has hope that Asian Garden will bounce back, but the road to normalcy is going to be long and stressful. </p>
