--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
                 <li><a class="nav-links active" href="aboutus.html">About Us</a></li>
-                <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
+                <li><a class="nav-links restaurant-link" href="eastboston.html">El Peñol</a></li>
                 <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
               </ul>
         </nav>
@@ -36,7 +36,7 @@
                     <img class="selina-image" src="assets/selina.png" alt="picture of selina wearing green cardigan and smiling">
                 </div>
                 <p><a href="https://selinal.myportfolio.com/"> Selina</a> is a junior majoring in Media Science. She is interested in user-experience, user-centered design, and storytelling. She grew up in the Boston Chinatown neighborhood and has fond memories eating out, playing, and connecting with people within the community. </p>
-                <p class="role">Role: Content Writing, CSS, HTML</p>
+                <p class="role">Role: Content Writing, CSS, HTML, Javascript</p>
             </section>
             <section class="elyana">
                 <h1>Elyana Alajmi</h1>
@@ -44,7 +44,7 @@
                     <img class="elyana-image" src="assets/elyana.png" alt="picture of elyana smiling">
                 </div>
                 <p><a href="https://www.linkedin.com/in/elyana-alajmi/">Elyana</a> is a Public Relations graduate student with a background in Marketing and Finance. She is interested in deepening her understanding of businesses and the client/investor relationship. She’s been in Boston for almost a decade and considers it her home. </p>
-                <p class="role">Role: Content Writing, Javascript</p>
+                <p class="role">Role: Content Writing, Javascript, HTML, CSS</p>
             </section>
         </div>
     </main>
