--- a/chinatown.html
+++ b/chinatown.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
                 <li><a class="nav-links" href="aboutus.html">About Us</a></li>
-                <li><a class="nav-links restaurant-link" href="eastboston.html">El Penol</a></li>
+                <li><a class="nav-links restaurant-link" href="eastboston.html">El Peñol</a></li>
                 <li><a class="nav-links restaurant-link active" href="chinatown.html">Asian Garden</a></li>
               </ul>
         </nav>
@@ -108,7 +108,7 @@
                 to Asian community members in need. </li>
             <a class="support-button"
                 href="https://donorbox.org/covid19-relief-fund?fbclid=IwAR1W0ywfhh41hw2R62c_p0AXBToPrHEiDyc71O3WK96nsIR6TYql4T7Dzk4">Donate</a>
-             <li class="list-support">Learn more about other local minority businesses. Read about El Penol, a
+             <li class="list-support">Learn more about other local minority businesses. Read about El Peñol, a
                 Latinx Restaurant in East Boston </li>
             <a class="support-button" href="eastboston.html"> Learn </a> </a>
             <li class="list-support">Spread the word. Share this website on your social media. </li>
