--- a/aboutus.html
+++ b/aboutus.html
@@ -17,9 +17,9 @@
         <nav>
             <ul>
                 <li><a class="nav-links" href="index.html">Centering Communities During COVID</a></li>
-                <li><a class="nav-links active" href="aboutus.html">About Us</a></li>
                 <li><a class="nav-links restaurant-link" href="eastboston.html">El Peñol</a></li>
                 <li><a class="nav-links restaurant-link" href="chinatown.html">Asian Garden</a></li>
+                <li><a class="nav-links" href="aboutus.html">About Us</a></li>
               </ul>
         </nav>
         <h1 class="about-us">About Us</h1>
