changed height of pictures

--- a/chinatown.html
+++ b/chinatown.html
@@ -46,7 +46,7 @@
   <main>
     <div class="introduction">
         <h2> Asian Garden is a seafood restaurant on 28 Harrison Ave in Boston’s Chinatown. </h2>
-        <h2> Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines.</h2>
+        <h2> Although it is famous for seafood, like walnut shrimp, lobster with ginger and scallions, deep-fried flounder, the restaurant also serves traditional Cantonese, Hong Kong, and Szechuan cuisines.</h2>
     </div> 
     <div class="walk-through">
         <p> When I walked inside Asian Garden on a late Friday afternoon, I saw people eating late lunches and early dinners around round tables. Colorful dividers were placed between tables to promote social distancing. A Chinese drama blared from a small, propped television. The bell notifying incoming customers enter would occasionally ring. </p>
