--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="horizontal-line1"> </div>
         </div>
         <div class="overview-part-1">
-            <p> The pandemic amplified a huge gap between white and minority communities including access to food, economic resources, job opportunities, and education. Because communities of color face more economic insecurity and often work service jobs, they face a greater risk of exposure to the virus, and thus are disproportionately affected by COVID-19. </p>
+            <p> The pandemic amplified a huge gap between white and minority communities, including access to food, economic resources, job opportunities, and education. Because communities of color face more economic insecurity and often work service jobs, they face a greater risk of exposure to the virus and are disproportionately affected by COVID-19. </p>
         </div>
         <div class="API-Data">
             <h4>Confirmed Cases, Deaths, and Vaccinations in Suffolk Country</h4>
@@ -55,8 +55,8 @@
         </div>  
         
             <div class="overview-part-3">
-                <p> Our goal is to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.” </p>
-                <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local business in the Boston and the greater Boston area and help support their businesses.  </p>
+                <p> Our goal is to focus on small businesses of color, many of whom financially struggle to maintain their business and face increasing uncertainty about reopening and going back to “normal.”  </p>
+                <p> This website aims to promote dialogue about the disproportionate impacts of COVID-19 on minority businesses. The goal is to spread awareness about local businesses in Boston and the greater Boston area and support them.   </p>
                     <blockquote> <img class="quotemark" src="assets/icons8-quote-left-100.png">
                         The pandemic’s disproportionate impact on minority-owned small businesses is further evidence of systemic inequalities in our country. Even more concerning, the pandemic could exacerbate and elongate the economic struggles already facing minority-owned businesses and families. <br> -<cite>Suzanne P. Clark, president of the U.S. Chamber</cite></div>
                     </blockquote>
